[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://pixel people/person013.png" type="Texture" id=2]
[ext_resource path="res://pixel people/person003.png" type="Texture" id=3]
[ext_resource path="res://Dynamic Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Dynamic FontLabel.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="ColorRect"]
layer = -50

[node name="MainVertDiv" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanel" type="Panel" parent="MainVertDiv"]
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="MainVertDiv/TopPanel"]
anchor_right = 1.0
anchor_bottom = 0.0627306
margin_bottom = 85.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 7
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.34902, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
text = "Base Text"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MidHorDiv" type="HBoxContainer" parent="MainVertDiv"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 547.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MainVertDiv/MidHorDiv"]
margin_right = 338.0
margin_bottom = 443.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/panel = SubResource( 2 )

[node name="Ha" type="Sprite" parent="MainVertDiv/MidHorDiv/Panel"]
position = Vector2( 75.7796, 52.2986 )
scale = Vector2( 17, 17 )
texture = ExtResource( 2 )
centered = false

[node name="RepDiv" type="Panel" parent="MainVertDiv/MidHorDiv"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 443.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReputationLabel" type="Label" parent="MainVertDiv/MidHorDiv/RepDiv"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -80.0
margin_right = 102.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="MainVertDiv/MidHorDiv"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 443.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_styles/panel = SubResource( 4 )

[node name="PinkBoy" type="Sprite" parent="MainVertDiv/MidHorDiv/Panel2"]
position = Vector2( 1.06726, 9.60583 )
scale = Vector2( 20, 20 )
texture = ExtResource( 3 )
centered = false
flip_h = true

[node name="ButtonsDiv" type="HBoxContainer" parent="MainVertDiv"]
margin_top = 551.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 15

[node name="Button0" type="Button" parent="MainVertDiv/ButtonsDiv"]
margin_right = 338.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button1" type="Button" parent="MainVertDiv/ButtonsDiv"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="MainVertDiv/ButtonsDiv"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="MainVertDiv/ButtonsDiv/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="MainVertDiv/ButtonsDiv/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MainVertDiv/ButtonsDiv/Button2" to="." method="_on_Button2_pressed"]
